fix tv page games being cropped at bottom of page

--- a/ui/site/css/tv/_single.scss
+++ b/ui/site/css/tv/_single.scss
@@ -9,7 +9,7 @@ $mq-col3: $mq-col3-uniboard;
 
   @include breakpoint($mq-col2) {
     grid-template-columns: auto 1fr;
-    grid-template-rows: auto fit-content(0) fit-content(0);
+    grid-template-rows: auto auto;
     grid-template-areas: 'app   app' 'side under';
 
     &__app {
